--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   justify-content: space-between;
   border: 1px solid #ccc;
   padding: 10px;
-  height: 40px;
+  height: 35px;
   width: 550px;
   text-align: center;
 }
@@ -83,10 +83,20 @@
   justify-content: space-evenly;
   align-items: center;
 }
+.virus{
+  background-color: black;
+}
 .flex {
   width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.sort-buttons button{
+  background-color: blue;
+  border-radius: 50px;
+  margin-left: 12px;
+  margin-top: 7px;
+  color: white;
 }
