--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .list {
   display: flex;
-  /* justify-content: center; */
   margin-left: 10px;
   height: 45px;
   font-size: 30px;
@@ -14,7 +13,6 @@
   flex-direction: column;
 }
 .country {
-  /* margin-top: 5px; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -24,6 +22,9 @@
   height: 35px;
   width: 550px;
   text-align: center;
+}
+.search {
+  width: 565px;
 }
 .number {
   font-size: 20px;
@@ -37,14 +38,16 @@
 .pagination {
   margin-top: 10px;
   display: flex;
-  justify-content: end;
-  align-items: end;
+  justify-content: center;
+  /* width: 130%; */
 }
 .pagination button {
+  display: flex;
   background-color: #ffffff;
   border: 2px solid #ccc;
   padding: 5px 10px;
-  margin: 2px 12.4px;
+  margin: 2px 5px;
+  justify-content: center;
   cursor: pointer;
 }
 .pagination button.active {
@@ -61,7 +64,7 @@
 .country-details img {
   width: 47%;
 }
-.namesize{
+.namesize {
   height: 80px;
 }
 .country-detailsAll {
@@ -72,6 +75,16 @@
   width: 100%;
   height: 100%;
 }
+.wrap-country {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+.left-details {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
 .flags {
   width: 60%;
 }
@@ -80,10 +93,10 @@
 }
 .nationalPhoto {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
-.virus{
+.virus {
   background-color: black;
 }
 .flex {
@@ -93,10 +106,43 @@
   justify-content: center;
   align-items: center;
 }
-.sort-buttons button{
+.sort-buttons {
+  width: 572px;
+}
+.sort-buttons button {
   background-color: blue;
   border-radius: 50px;
   margin-left: 12px;
   margin-top: 7px;
   color: white;
+}
+.region {
+  display: flex;
+  justify-content: space-between;
+}
+.region-list {
+  display: flex;
+  flex-direction: column;
+}
+.subregion-list {
+  display: flex;
+  flex-direction: column;
+}
+.region button {
+  background-color: #a1b124;
+  margin: 5px 0px 0px 0px;
+}
+.region button.active {
+  color: black;
+}
+.map-container {
+  width: 350px;
+  height: 200px;
+  margin-top: 20px;
+}
+
+.country-map {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
